# cmake-mysql

./: .gitignore  CMakeLists.txt  database.cpp  database.hxx  filehandler.cpp  filehandler.hxx  include.hxx  main.cpp
